# LucidGUI

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compileNote.txt  run.sh
Lucid/: CMakeLists.txt
Lucid/src/: CMakeLists.txt  main.cpp
Lucid/src/Data/: AccountManager.h  LucidConfig.cpp  LucidConfig.h
LucidCLI/: CMakeLists.txt
LucidCLI/src/: CMakeLists.txt  main.cpp
LucidCLI/src/Data/: AccountManager.cpp  AccountManager.h
LucidCLI/src/Globals/: Globals.h
LucidCLI/src/IO/: LucidControl.h
LucidGUI/: CMakeLists.txt
LucidGUI/src/: CMakeLists.txt  main.cpp
LucidGUI/src/Action/: Action.h
LucidGUI/src/Data/: AccountManager.cpp  DataManagerBase.h  LucidConfig.h
LucidGUI/src/GUI/: App.h  LucidGui.cpp  LucidGui.h
LucidGUI/src/Globals/: Globals.h
src/: CMakeLists.txt  main.cpp
src/Data/: AccountManager.cpp  AccountManager.h  ConfigManager.cpp  ConfigManager.h  DataManager.cpp  DataManager.h  DataManagerBase.h  LucidConfig.cpp  LucidConfig.h
src/GUI/: App.cpp  App.h  LucidConfigGui.cpp  LucidConfigGui.h  LucidGui.cpp  LucidGui.h
src/IO/: Control.cpp  Control.h  LucidControl.cpp  LucidControl.h
