add_executable(main main.cpp
                    Data/AccountManager.cpp
                    Data/ConfigManager.cpp
                    IO/LucidControl.cpp
                    GUI/App.cpp
                    GUI/LucidGui.cpp
                    GUI/LucidConfigGui.cpp
                    Action/Action.cpp
)