add_executable(main main.cpp
                    Data/AccountManager.cpp
                    Data/LucidConfig.cpp
                    IO/LucidControl.cpp
                    GUI/App.cpp
                    GUI/LucidGui.cpp
                    GUI/LucidConfigGui.cpp
                    Action/Action.cpp
)