add_executable(main main.cpp
                    Data/AccountManager.cpp
                    Data/LucidConfig.cpp
                    GUI/App.cpp
                    GUI/LucidGui.cpp
                    Action/Action.cpp
                    Globals/Globals.h
                    IO/LucidControl.cpp
)