add_executable(main main.cpp
                    Data/AccountManager.cpp
                    Data/LucidConfig.cpp
                    GUI/App.cpp
                    GUI/LucidGui.cpp
                    GUI/LucidConfigGui.cpp
                    Action/Action.cpp
                    Globals/Globals.h
)